package com.github.TeamRocketBalleBalle.Ricktionary.Resources.Constants;

public final class LoadScene {
    public static final int MATCHMAKING_SCENE = 1;
    public static final int LOAD_IMAGE = 2;
    public static final int GAME_SCENE = 3;
    public static final int WINNER_SCENE = 4;
    public static final int LOSER_SCENE = 5;
}
